# grit

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/cli/: args.rs
src/cli/commands/: auth.rs  init.rs  misc.rs  mod.rs  play.rs  staging.rs  utils.rs  vcs.rs
src/playback/: events.rs  lyrics.rs  mod.rs  mpv.rs  queue.rs  spotify.rs
src/provider/: mod.rs  spotify.rs  traits.rs  types.rs  youtube.rs
src/state/: config.rs  credentials.rs  diff.rs  journal.rs  mod.rs  snapshot.rs  staging.rs  working_playlist.rs
src/tui/: app.rs  mod.rs  ui.rs
src/utils/: crypto.rs
