[package]
name = "plr"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
async-trait = "0.1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
clap = {version = "4", features = ["derive"]}
toml = "0.8"
sha2 = "0.10"
chrono = {version = "0.4", features = ["serde"]}

[dev-dependencies]
tempfile = "3"